Added PRIMITIVE as lexer token. Anything that is recognized as a primitive is no longer wrapped in an OperatorCall. CurieElement must now accept SYMBOL and PRIMITIVE as localname Made location of the Ontology configurable